# hintents

./: .golangci.yml  .pre-commit-config.yaml  CLI_REFACTOR_ISSUE_101.md  DELIVERY_COMPLETE.md  IMPLEMENTATION_GUIDE_XDR_GENERATOR.md  IMPLEMENTATION_INTERACTIVE_SHELL.md  IMPLEMENTATION_SIMULATOR_VALIDATION.md  Makefile  PR_SUBMISSION_GUIDE.md  README.md  TYPESCRIPT_BINDINGS_SUMMARY.md  XDR_GENERATOR_PR_SUMMARY.md  fix_all_licenses.sh  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  strict-lint.yml
__mocks__/: pkcs11js.ts
cmd/: generate-bindings.go
cmd/erst/: main.go
cmd/generate-xdr-snapshot/: README.md  main.go  main_test.go
docs/: ARCHITECTURE.md  BINDINGS_ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  HSM_INTEGRATION.md  INTERACTIVE_SHELL.md  TYPESCRIPT_BINDINGS.md  environment-variables.md  opentelemetry.md  update-checker.md
docs/adr/: 001-snapshot-caching-strategy.md  002-hsm-integration.md  README.md
docs/schema/: CHANGELOG.md  FINAL_CHECKPOINT_REPORT.md  README.md  VALIDATION_REPORT.md  common.schema.json  (+3 more)
scripts/: check-license-headers.sh  generate-snapshot.sh  lint-strict.sh  test-strict-linting.sh
simulator/: Cargo.toml
simulator/examples/: hsm_integration.rs
simulator/src/: main.rs  main_test.rs  memory_limit_test.rs  runner.rs  source_map_cache.rs  source_mapper.rs  stack_trace.rs  test.rs  types.rs
simulator/src/hsm/: mod.rs  pkcs11.rs  software.rs
simulator/src/snapshot/: mod.rs
simulator/tests/: hsm_integration_tests.rs
tests/: pkcs11Signer.signing.test.ts  test_fix_all_licenses.sh
(+108 files in other folders)
